Enable OVH instead of Runabove + add phpcs

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
             "Engineor\\Flysystem\\": "src/"
         }
     },
+    "config": {
+        "bin-dir": "bin"
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "1.0.x-dev"
